Fix chat bubble - Treat chat tabs as unviewed when chat panel is collapsed. Fix chat tabs close button so that tab doesn't get shown when close button is clicked.

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -190,8 +190,8 @@ html, body {
 
 .nav-tabs .nav-item .closeTab {
   opacity: 0;
-  margin-right: 0px;
-  padding-right: 0px;
+  margin: 0px;
+  padding: 0px;
   font-size: 0.85em;
 }
 
